cards no longer behave weierd on IE (I hope)

--- a/css/containers.css
+++ b/css/containers.css
@@ -39,12 +39,6 @@
     overflow: hidden;
 }
 
-.card.same-height {
-    -webkit-align-self: stretch;
-        -ms-flex-item-align: stretch;
-            align-self: stretch;
-}
-
 .card .text,
 .panel {
     padding: 16px;
@@ -53,11 +47,23 @@
 .card .text {
     width: 100%;
     opacity: .6;
+}
+
+.card.same-height {
+    -webkit-align-self: stretch;
+        -ms-flex-item-align: stretch;
+            align-self: stretch;
+}
+
+.card.same-height .text {
+    -webkit-align-self: stretch;
+        -ms-flex-item-align: stretch;
+            align-self: stretch;
     -webkit-box-flex: 1;
-    -webkit-flex: 1;
+    -webkit-flex: 1 1 auto;
        -moz-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
 }
 
 .card .media {
@@ -86,10 +92,6 @@
 }
 
 .card .actions {
-    width: 100%;
-    padding: 8px;
-    font-size: 16px;
-    border-top: 1px solid rgba(0, 0, 0, .2);
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -103,6 +105,10 @@
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border-top: 1px solid rgba(0, 0, 0, .2);
 }
 
 .card .menu {
